# Edunack

./: Makefile  flake.nix  package-lock.json  package.json  winmake.bat  winmake.ps1
backend/: .env  .env.example  Cargo.toml  Makefile  db.sqlite  dev.sqlite  index.html  records.sql  schema.sql  sqlx.sqlite
backend/example/: google.html  rating.html
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/src/: auth.rs  db.rs  login.rs  main.rs  router.rs  user.rs
backend/src/db/: category.rs  course.rs  mod.rs  rating.rs
backend/src/db/models/: category.rs  course.rs  mod.rs  user.rs
backend/src/db/tables/: category.rs  course.rs  mod.rs  rating.rs  user.rs
backend/src/db/user/: favorites.rs  mod.rs  user.rs
backend/src/rankers/: coursera.rs  mod.rs  youtube.rs
backend/src/routers/: auth.rs  login.rs  mod.rs  rate.rs  search.rs
backend/src/routers/user/: favorites.rs  mod.rs
frontend/: README.md  index.html  package-lock.json  package.json  sessionStoredData.txt  tsconfig.app.tsbuildinfo
frontend/src/: AccessibilityContext.tsx  App.css  App.tsx  Menu.css  Menu.tsx  main.css  main.tsx
frontend/src/CommonAssets/: Button.css  Button.tsx  Course.css  Course.tsx  CourseRank.css  CourseRank.tsx  InlineCourse.css  InlineCourse.tsx  InlineCourseContinueMobile.css  InlineCourseContinueMobile.tsx  InlineCourseMobile.css  InlineCourseMobile.tsx  InlineCoursePremium.css  InlineCoursePremium.tsx  Input.css  Input.tsx  Loading.css  Loading.tsx  SideMenu.css  SideMenu.tsx  Tile.css  Tile.tsx
frontend/src/assets/: Advert.css  Advert.tsx  Footer.css  Footer.tsx  InfoPanel.css  InfoPanel.tsx  Menu.css  Menu.tsx  Recommendations.css  Recommendations.tsx  SearchBar.css  SearchBar.tsx  WelcomePanel.css  WelcomePanel.tsx
frontend/src/assets/CommonAssets/: Button.css  Button.tsx  Tile.css  Tile.tsx
frontend/src/assets/RecommendationsAssets/: Course.css  Course.tsx
frontend/src/routes/: About.css  About.tsx  App.tsx  CourseDetail.css  CourseDetail.tsx  Disqus.tsx  Error.css  Error.tsx  Login.css  Login.tsx  MailConfimation.tsx  MailConfirmation.css  MainPage.css  MainPage.tsx  Menu.css  Menu.tsx  PasswordChange.css  PasswordChange.tsx  Profile.css  Profile.tsx  Ranking.css  Ranking.tsx  Register.css  Register.tsx  Search.css  Search.tsx
frontend/src/routes/MainPage/: Advert.css  Advert.tsx  Footer.css  Footer.tsx  InfoPanel.css  InfoPanel.tsx  Recommendations.css  Recommendations.tsx  WelcomePanel.css  WelcomePanel.tsx
frontend/src/routes/MainPage/AdditionalAssets/: Course.css
frontend/src/routes/RankingPage/: FullRanking.css  FullRanking.tsx  OutsidePodium.css  OutsidePodium.tsx  Search.css  Search.tsx  SearchBar.tsx  Top3.css  Top3.tsx
