[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
http = "1.1.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "uuid", "macros", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["normalize-path", "fs", "cors"] }
uuid = { version = "1.10.0", features = ["v4"] }

