[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.1.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.210"
#sqlx = { version = "0.8.2", features = ["sqlite", "uuid", "macros", "runtime-tokio", "regexp"] }
#diesel = { version = "2.2.4", features = ["sqlite", "uuid"] }
rusqlite = { version = "0.32.1", features = ["functions", "uuid"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["normalize-path", "fs", "cors"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
libsqlite3-sys = { version = "0.30.1", optional = true, default-features = false, features = [
    "bundled"
] }
axum-macros = "0.4.2"
regex = "1.11.1"
reqwest = "0.12.9"
scraper = "0.21.0"

[target.'cfg(unix)'.dependencies.libsqlite3-sys]
version = "0.30.1"
default-features = false
features = [
     "bundled-sqlcipher"
]

[target.'cfg(windows)'.dependencies.libsqlite3-sys]
version = "0.30.1"
default-features = false
features = [
     "bundled-sqlcipher-vendored-openssl"
]



