[package]
name = "edunack"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros", "ws"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
http = "1.2.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["sqlite", "uuid", "macros", "runtime-tokio", "regexp"] }
rusqlite = { version = "0.32.1", features = ["functions", "uuid"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path", "fs", "cors"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
libsqlite3-sys = { version = "0.30.1", optional = true, default-features = false, features = [
    "bundled"
] }
axum-macros = "0.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
scraper = "0.22.0"
futures = "0.3.31"
axum-extra = { version = "0.10.0", features = ["cookie"] }
edunack-macros = { path = "macros" }
serde_json = "1.0.136"
async-trait = "0.1.85"
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies.libsqlite3-sys]
version = "0.30.1"
default-features = false
features = [
     "bundled-sqlcipher"
]

[target.'cfg(windows)'.dependencies.libsqlite3-sys]
version = "0.30.1"
default-features = false
features = [
     "bundled-sqlcipher-vendored-openssl"
]



